# webmining

./: Conexión_API_GoogleMaps+Hoteles.ipynb  Conexión_API_GoogleMaps.ipynb  Makefile  README.md  app.py  main.py  matriz_distancias.csv  pyproject.toml  requirements.txt  test.ipynb
data/: depots.txt  df_completo.txt  distancias.csv  distancias_test.csv  g_distancias.csv  g_nodos.txt  g_tiempos.csv  nodos.txt  tiempos.csv
data/depot0/: g_distancias.csv  g_nodos.txt  g_tiempos.csv
data/depot1/: g_distancias.csv  g_nodos.txt  g_tiempos.csv
data/depot10/: g_distancias.csv  g_nodos.txt  g_tiempos.csv
data/depot2/: g_distancias.csv  g_nodos.txt  g_tiempos.csv
data/depot3/: g_distancias.csv  g_nodos.txt  g_tiempos.csv
data/depot4/: g_distancias.csv  g_nodos.txt  g_tiempos.csv
data/depot5/: g_distancias.csv  g_nodos.txt  g_tiempos.csv
data/depot6/: g_distancias.csv  g_nodos.txt  g_tiempos.csv
data/depot7/: g_distancias.csv  g_nodos.txt  g_tiempos.csv
data/depot8/: g_distancias.csv  g_nodos.txt  g_tiempos.csv
data/depot9/: g_distancias.csv  g_nodos.txt  g_tiempos.csv
docs/diagrams/: tsp_flow.dot  tsp_flow.py
src/: data_loader.py  display.py  optimizer.py
