[project]
name = "webmining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diagrams>=0.24.4",
    "googlemaps>=4.10.0",
    "graphviz>=0.20.3",
    "matplotlib>=3.10.8",
    "ortools>=9.15.6755",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
]
